scripts/test-patch/ingresses/patch-ingress-2g.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    ingress.neo9.io/enable-operator: "true"
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.neo9.io/allowed-visitors: customer
  name: demoingress2
  namespace: default
spec:
  rules:
    - host: demoingress2.dev-xmichel.neokube.neo9.pro
      http:
        paths:
          - backend:
              service:
                name: nginx-ingress-controller-default-backend
                port:
                  number: 80
            path: /demo
            pathType: Prefix
